--- a/desafio-03/desaf-cordel.html
+++ b/desafio-03/desaf-cordel.html
@@ -27,7 +27,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -63,7 +63,7 @@
 
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -100,7 +100,7 @@
     </section>
 
     <footer>
-        <p>Criado por Carlos eduardo</p>
+                <p>Criado por <a href="https://github.com/carloseduardocodes" target="_blank">Carlos Eduardo</a></p>
     </footer>
 </body>
 
