--- a/ex010/index.html
+++ b/ex010/index.html
@@ -1,20 +1,12 @@
+
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links Externos</title>
+    <title>img</title>
 </head>
 <body>
-    <H1>Usando links externos</H1>
-    <p>acessando sites tipo o do <a href="https://youtube.com/cursoemvideo/" target="_blank" rel="externos"> canal do mestre gafanhoto </a> </p>
-    <p>como visto essa é a primeira pagina, se quiser pode acessar <a href="pag002.html" rel="next" rel="self"> segunda pagina </a> </p>
-    <p>Também podemos acessar a <a href="noticias/pag003.html" rel="self ">terceira pagina</a></p>
-    <h2>Links para download</h2>
-    <ul>
-        <li><a href="livros/meulivro.pdf" download="meulivro.pdf" >baixar livro pdf </a></li>
-        <li><a href="#">baixar livro compactado.zip</a></li>
-    </ul>
-
+    
 </body>
 </html>
