mudança no button

--- a/testeimg/index.html
+++ b/testeimg/index.html
@@ -33,7 +33,7 @@
             </div>
 
 
-            <button type="submit"> Entrar</button>
+            <button type="button"> Entrar</button>
 
             <div class="box-esqui">
                 Nao tem uma conta? <a href="#"><strong>registre-se</strong></a>
