--- a/testeimg/index.html
+++ b/testeimg/index.html
@@ -32,8 +32,8 @@
                 <a href="#"><strong>esqueci minha senha</strong></a>
             </div>
 
-
-            <button type="button"> Entrar</button>
+           
+            <a href="conteudo/index.html"><button type="button" id="isenha"> Entrar</button></a>
 
             <div class="box-esqui">
                 Nao tem uma conta? <a href="#"><strong>registre-se</strong></a>
